{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 18,
  "lineage": "93dee8c5-2c30-bc38-b6db-c63c62759512",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "was-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:security-group/sg-023687ddd850dec6c",
            "description": "Allow WEB EC2 ONLY",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-was-alb-sg"
                ]
              }
            ],
            "id": "sg-023687ddd850dec6c",
            "name": "terraform-2024042301523247130000000b",
            "tags": {
              "Name": "3-Tier-was-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:security-group/sg-0c07c85f7df07a0af",
            "description": "Allow HTTP and HTTPS for World",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-web-alb-sg"
                ]
              }
            ],
            "id": "sg-0c07c85f7df07a0af",
            "name": "terraform-20240423015226748100000009",
            "tags": {
              "Name": "3-Tier-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:subnet/subnet-09be058f65faebc7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "available_ip_address_count": 247,
            "cidr_block": "192.168.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet1"
                ]
              }
            ],
            "id": "subnet-09be058f65faebc7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet1"
            },
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:subnet/subnet-02242abc17ba0408b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "available_ip_address_count": 245,
            "cidr_block": "192.168.50.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet2"
                ]
              }
            ],
            "id": "subnet-02242abc17ba0408b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:subnet/subnet-0870864fe00cf82f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "available_ip_address_count": 249,
            "cidr_block": "192.168.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Public-Subnet1"
                ]
              }
            ],
            "id": "subnet-0870864fe00cf82f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Public-Subnet1"
            },
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:subnet/subnet-02242abc17ba0408b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "available_ip_address_count": 245,
            "cidr_block": "192.168.50.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-Private1-Subnet2"
                ]
              }
            ],
            "id": "subnet-02242abc17ba0408b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "3-Tier-Private1-Subnet2"
            },
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382777416:vpc/vpc-0e9cc31bdf00f9439",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0499780a0c886857b",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bd1210344f0a3cc5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "3-Tier-VPC"
                ]
              }
            ],
            "id": "vpc-0e9cc31bdf00f9439",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-008baae1f5849053a",
            "owner_id": "992382777416",
            "tags": {
              "Name": "3-Tier-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "was-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:loadbalancer/app/Was-elb-test/2bdc18c50b5083cf",
            "arn_suffix": "app/Was-elb-test/2bdc18c50b5083cf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Was-elb-test-1552788162.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:loadbalancer/app/Was-elb-test/2bdc18c50b5083cf",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Was-elb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023687ddd850dec6c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02242abc17ba0408b"
              },
              {
                "subnet_id": "subnet-09be058f65faebc7e"
              }
            ],
            "subnets": [
              "subnet-02242abc17ba0408b",
              "subnet-09be058f65faebc7e"
            ],
            "tags": {
              "Name": "Was-elb-test"
            },
            "tags_all": {
              "Name": "Was-elb-test"
            },
            "vpc_id": "vpc-0e9cc31bdf00f9439",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.alb.data.aws_security_group.was-alb-sg",
            "module.alb.data.aws_subnet.private1-subnet1",
            "module.alb.data.aws_subnet.private1-subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:loadbalancer/app/Web-elb-test/811100f3d1bb8677",
            "arn_suffix": "app/Web-elb-test/811100f3d1bb8677",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-elb-test-936993917.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:loadbalancer/app/Web-elb-test/811100f3d1bb8677",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-elb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c07c85f7df07a0af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02242abc17ba0408b"
              },
              {
                "subnet_id": "subnet-0870864fe00cf82f4"
              }
            ],
            "subnets": [
              "subnet-02242abc17ba0408b",
              "subnet-0870864fe00cf82f4"
            ],
            "tags": {
              "Name": "Web-elb-test"
            },
            "tags_all": {
              "Name": "Web-elb-test"
            },
            "vpc_id": "vpc-0e9cc31bdf00f9439",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "was-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:listener/app/Was-elb-test/2bdc18c50b5083cf/adb2a2a8734283c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:targetgroup/Was-TG-test/8b4f65955cb61840",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:listener/app/Was-elb-test/2bdc18c50b5083cf/adb2a2a8734283c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:loadbalancer/app/Was-elb-test/2bdc18c50b5083cf",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.was-elb",
            "module.alb.aws_lb_target_group.was-tg",
            "module.alb.data.aws_security_group.was-alb-sg",
            "module.alb.data.aws_subnet.private1-subnet1",
            "module.alb.data.aws_subnet.private1-subnet2",
            "module.alb.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:listener/app/Web-elb-test/811100f3d1bb8677/f2ab1857693b5443",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:targetgroup/Web-TG-test/02b4b62cb39893a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:listener/app/Web-elb-test/811100f3d1bb8677/f2ab1857693b5443",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:loadbalancer/app/Web-elb-test/811100f3d1bb8677",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.aws_lb_target_group.web-tg",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "was-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:targetgroup/Was-TG-test/8b4f65955cb61840",
            "arn_suffix": "targetgroup/Was-TG-test/8b4f65955cb61840",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:targetgroup/Was-TG-test/8b4f65955cb61840",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Was-TG-test",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Was-TG-test"
            },
            "tags_all": {
              "Name": "Was-TG-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          },
          "dependencies": [
            "module.alb.aws_lb.was-elb",
            "module.alb.data.aws_security_group.was-alb-sg",
            "module.alb.data.aws_subnet.private1-subnet1",
            "module.alb.data.aws_subnet.private1-subnet2",
            "module.alb.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:targetgroup/Web-TG-test/02b4b62cb39893a3",
            "arn_suffix": "targetgroup/Web-TG-test/02b4b62cb39893a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:992382777416:targetgroup/Web-TG-test/02b4b62cb39893a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG-test",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Web-TG-test"
            },
            "tags_all": {
              "Name": "Web-TG-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9cc31bdf00f9439"
          },
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}